Fixing a a problem with some item wrapping on Skills section

--- a/css/style.css
+++ b/css/style.css
@@ -1159,6 +1159,10 @@ section.body.contact{
 			
 		}
 	
+			section.skills div.skills-main{
+				flex-wrap: wrap;	
+			}
+	
 			section.skills div.footer>div{
 				width: 100%!important;	
 			}
